flex-wrap more fit to mobile

--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
             </div>
         </header>
         <!-- White Container -->
-        <div class='whitecontainer d-flex w-200 h-100'>
-            <div class='container about-text my-3'>
+        <div class='whitecontainer d-flex w-auto h-auto'>
+            <div class='container mx-auto about-text my-3'>
                 <h2> Welcome to my personal website! </h2>
                 <p> I am a junior at Carnegie Mellon University studying Neuroscience and Human Computer Interaction. I am on the premed track and am preparing for admissions to medical school.</p>
                 <p>I think being a doctor is the highest pursuit of a life’s work for those who find fulfillment in solving problems to improve other’s quality of life. 
@@ -41,13 +41,13 @@
                 <p>I am so lucky to have had all these experiences that have made my heart so full and proud. And I am can’t wait to see what more the future holds for me.</p>
             </div>
 
-            <div class='container my-4'>
-                <div class='resume-container mx-auto'> 
+            <div class='container my-4 w-auto '>
+                <div class='resume-container w-auto mx-auto'> 
                     <p class='resume-text my-auto'>Carnegie Mellon University '23</p>
                     <p class='resume-text'>Cognitive Neuroscience</p>
                     <p class='resume-text'>Additional Major in Human-Computer Interaction</p>
                 </div>
-                <div class='transparent-container mx-auto '>
+                <div class='transparent-container  w-auto mx-auto '>
                     <h4 class='my-3 mx-2'>Resume</h4> 
                     <a href='SoheeKim-CV .pdf' class='mx-5'> Download pdf </a>
                     <h4 class='my-4 mx-2'>Contact</h4> 
