fixed about page

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         </header>
         <!-- White Container -->
         <div class='whitecontainer d-flex w-auto h-auto'>
-            <div class='container mx-auto about-text my-3'>
+            <div class='container mx-3 about-text w-50 my-3'>
                 <h2> Welcome to my personal website! </h2>
                 <p> I am a junior at Carnegie Mellon University studying Neuroscience and Human Computer Interaction. I am on the premed track and am preparing for admissions to medical school.</p>
                 <p>I think being a doctor is the highest pursuit of a life’s work for those who find fulfillment in solving problems to improve other’s quality of life. 
