--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
             </div>
         </header>
         <!-- White Container -->
-        <div class='whitecontainer d-flex w-auto h-auto'>
+        <div id='flexx' class='whitecontainer d-flex w-auto h-auto'>
             <div class='container mx-3 about-text w-50 my-3'>
                 <h2> Welcome to my personal website! </h2>
                 <p> I am a junior at Carnegie Mellon University studying Neuroscience and Human Computer Interaction. I am on the premed track and am preparing for admissions to medical school.</p>
