finally fixed about

--- a/about.html
+++ b/about.html
@@ -33,12 +33,12 @@
         </header>
         <!-- White Container -->
         <div id='flexx' class='whitecontainer d-flex w-auto h-auto'>
-            <div class='container mx-3 about-text w-50 my-3'>
+            <div class='container mx-3 about-text w-auto my-3'>
                 <h2> Welcome to my personal website! </h2>
                 <p> I am a junior at Carnegie Mellon University studying Neuroscience and Human Computer Interaction. I am on the premed track and am preparing for admissions to medical school.</p>
                 <p>I think being a doctor is the highest pursuit of a life’s work for those who find fulfillment in solving problems to improve other’s quality of life. 
                     As such, I am seeking opportunities in which I can grow as a scientist and patient advocate.</p>
-                <p>I am so lucky to have had all these experiences that have made my heart so full and proud. And I am can’t wait to see what more the future holds for me.</p>
+                <p>I am so lucky to have had all these experiences that have made my heart so full and proud. And I can’t wait to see what more the future holds for me.</p>
             </div>
 
             <div class='container my-4 w-auto '>
