all the flexes work

--- a/docs.html
+++ b/docs.html
@@ -32,7 +32,7 @@
         </header>
 
         <!-- White Container -->
-        <div class='whitecontainer d-flex w-200 h-auto' >
+        <div id='flexx' class='whitecontainer d-flex w-200 h-auto' >
             <div class='container about-text my-3'>
                 <h2> Doctors of Carnegie Society, <em>Executive Board Member</em></h2>
                 <p>Collaborate with fellow pre-health students on the executive board to plan events and resources that enhance the shared experience of being a pre-health student at CMU</p>
@@ -41,7 +41,7 @@
                     Committee by educating members on issues concerning diversity and inclusion in healthcare</p>
             </div>
 
-            <div class='container my-4'>
+            <div class='container w-50 my-4'>
                 <div class=' mx-auto'> 
                     <img src="docs.png" class="img-fluid details-img shadow" alt="colon cancer clipart">
 
