--- a/kasa.html
+++ b/kasa.html
@@ -32,14 +32,14 @@
         </header>
 
         <!-- White Container -->
-        <div class='whitecontainer d-flex w-200 h-auto' >
+        <div id='flexx'  class='whitecontainer d-flex w-200 h-auto' >
             <div class='container about-text my-3'>
                 <h2> Korean-American Students' Association, <em>President</em></h2>
                 <p>The Korean American Students' Association addresses the sociocultural need for a Korean-American presence on campus byway of a social organization. We are committed to providing a social community for Korean-American students and others who are interested in or enjoy Korean culture. Our KASA family meets weekly and holds students from all backgrounds and ethnicities, enriching our college experience. We have official events and food sales as an organization monthly, and often individually host social events on the weekends where our members get to know each other better and share memorable times together.</p>
                 
             </div>
 
-            <div class='container my-4'>
+            <div class='container w-50 my-4'>
                 <div class=' mx-auto'> 
                     <img src="kasa.png" class="img-fluid details-img shadow" alt="colon cancer clipart">
 
