--- a/kdac.html
+++ b/kdac.html
@@ -32,7 +32,7 @@
         </header>
 
         <!-- White Container -->
-        <div class='whitecontainer d-flex w-200 h-auto' >
+        <div id='flexx'  class='whitecontainer d-flex w-200 h-auto' >
             <div class='container about-text my-3'>
                 <h2> Korean Doctors Against COVID-19, <em> Volunteer</em> </h2>
                 <p> This experience exposed me to clinical practice in form of free COVID-19 Drive-thru antibody testing. The KDAC team and I interacted directly with over 2000 patients consenting their understanding of the testing, conducting the rapid antibody tests, and communicating results over the phone. My volunteer work started with inventory work, counting donations and setting up stations with proper equipment. 
@@ -42,7 +42,7 @@
                 <p>Every volunteer's selfless dedication and leadership was so evident to me, as I participated in these events. On the early morning of our event, the team spent 2 hours preparing the outdoor tents, inventory, and traffic cones. During the testing, volunteers sweat under masks, face shields, and protective personal equipment to test people in our community. We had to work under rain, under sun, and even had to face a flooded garage before! In the span of four events, we tested over 1000 patients and our work even continued to smaller scale opportunities, helping uninsured restaurant workers in NYC. Through this experience, I felt a great sense of community, admiration for front line workers, and passion to be an advocate for serving the underserved in medicine.</p>
             </div>
 
-            <div class='container my-4'>
+            <div class='container w-50 my-4'>
                 <div class=' mx-auto'> 
                     <img src="kdac-img.jpeg" class="img-fluid details-img shadow alt="KdaCOVID-19 image">
 
