--- a/soojin.html
+++ b/soojin.html
@@ -32,14 +32,14 @@
         </header>
 
         <!-- White Container -->
-        <div class='whitecontainer d-flex w-200 h-auto' >
+        <div id='flexx'  class='whitecontainer d-flex w-200 h-auto' >
             <div class='container about-text my-3'>
                 <h2> Observership with Dr. Soojin Ahn, <em> Breast Cancer</em> </h2>
                 <p>I shadowed Dr. Soojin Ahn at Mount Sinai Hospital St. Luke’s both in operating rooms and consultations. In operating rooms, I was exposed to procedures ranging from lymph node biopsies to lumpectomies and mastectomies. </p>
                 <p>Dr. Ahn was the first doctor that I had shadowed and felt that her treatment plan for her patients was a team effort. She valued sharing informed discussions to make an individualized plan fit for her patient's disease, family, social life, etc.</p>
             </div>
 
-            <div class='container my-4'>
+            <div class='container w-50  my-4'>
                 <div class=' mx-auto'> 
                     <img src="breastCancer.jpeg" class="img-fluid details-img shadow" alt="Breast Cancer clipart">
                 </div>
