--- a/yttri.html
+++ b/yttri.html
@@ -32,7 +32,7 @@
         </header>
 
         <!-- White Container -->
-        <div class='whitecontainer d-flex w-200 h-auto' >
+        <div id='flexx' class='whitecontainer d-flex w-200 h-auto' >
             <div class='container about-text my-3'>
                 <h2> Yttri Lab, <em> Student Researcher</em> </h2>
                 <p> This past Fall 2021 semester, I have had the pleasure of joining the Yttri Lab team, studying by computational methods how neural circuits lead to certain behavior. This project is a continuation of a summer project from a previous year. I worked very closely with Alex Hsu, a graduate student in the lab, who directed all my training for the project.</p>
@@ -40,7 +40,7 @@
                 <p>I have learned to refine pose estimations and program on DeepLabCut to train models that can predict mouse behavior in an open field. The B-SOiD algorithm that Alex Hsu and Dr. Yttri developed was used to identify position patterns of the mouse and discover spontaneous behavior. B-SOiD’s kinematic sensitivity and ability to dissociate behavior accurately helps us gain a deeper understanding about OCD behavior. </p>
             </div>
 
-            <div class='container my-4'>
+            <div  class='container w-auto my-4'>
                 <div class=' mx-auto'> 
                     <img src="yttri-img.jpeg" class="img-fluid details-img shadow alt="Yttri Lab image">
 
